<resources>
    <string name="header_title_about">About</string>
    <string name="header_title_scan">Captix Scan</string>
    <string name="header_title_setting">Settings</string>
    <string name="header_title_history">History</string>
    <string name="app_name">Captix Scan</string>
    <string name="action_settings">Settings</string>
    <string name="mess_waitting">Processing...</string>
    <string name="scanner">SCANNER</string>
    <string name="sound">Sound</string>
    <string name="auto_open_url">Always ask before opening</string>
    <string name="url_profile">URL Profile</string>
    <string name="auto_close">Auto close URL view after</string>
    <string name="share">SHARE</string>
    <string name="message">Message</string>
    <string name="button_done">Done</string>
    <string name="mail">Mail</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="common_imagebutton_description">imagebutton</string>
    <string name="cancel">Cancel</string>
    <string name="mess_error_network">No Internet connection, please check your network.</string>
    <string name="mess_error_urlprofile">URL Profile is required.</string>
    <string name="mess_update_urlprofile_successfull">URL Profile has been updated successfully.</string>
    <string name="mess_update_urlprofile">Invalid URL Profile.</string>
    <string name="link">cptr.it</string>
    <string name="time_setting">5 seconds</string>
    <string name="save">Save</string>
    <string name="ok">Ok</string>
    <string name="about">      This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible. This letter should state directly that you are applying for a specific position. After the introduction, the body of the letter should focus on your qualifications that best match the requirements for the position. Use statements noting your accomplishments whenever possible.</string>
    <string name="activity_create_evernote_btn_select_notebook">Select Notebook</string>
    <string name="activity_create_evernote_title">Note Title</string>
    <string name="activity_create_evernote_content">Note Content</string>
    <string name="activity_create_evernote_error_listing_notebooks">Error listing notebooks</string>
    <string name="activity_create_evernote_error_creating_notestore">Error creating notestore</string>
    <string name="activity_create_evernote_error_saving_note">Error saving note</string>
    <string name="activity_create_evernote_error_listing_notes">Error listing note</string>
    <string name="activity_create_evernote_empty_content_error">Note title and content cannot be empty</string>
    <string name="activity_create_evernote_note_saved">Note saved to Evernote</string>
    <string name="activity_scan_open_url_confirm">Are you sure you want to browse scanned result?</string>
    <string name="activity_scan_open_browser_title"> Open Browser</string>
    <string name="activity_scan_invalid_url_title">Invalid URL</string>
    <string name="activity_scan_invalid_url_message">Invalid URL Format</string>
    <string name="activity_scan_camera_unavailable">Camera is not available</string>
    <string name="activity_history_delete_history_confirm">Are you sure you want to delete this scan history?</string>
    <string name="activity_history_delete_all_history_confirm">Are you sure you want to delete all scan history?</string>
    <string name="activity_history_delete_history_title">Delete History</string>
    <string name="activity_history_delete_all_history_title">Delete All History</string>
    <string name="activity_history_header_deleteall">Delete All</string>
    <string name="content_html">content_detail.html</string>
    <string name="content_to_share_social_media">Need a QR or barcode reader? Captix: Scan is the best one I\'ve found. Give it a try! </string>
    <string name="mess_post_success">Commment has been posted in your wall!</string>
    <string name="press_exit"> Press again to exit.</string>
    <string name="activity_settting_confirm">Are you sure you want to post on your wall?</string>
    <string name="email_title_share">Captix Scan Share</string>
    <string name="mess_not_exist_shortcut">Sorry, no shortcut exists. Create a shortcut in Settings.</string>
    <string name="mess_update_urlshortcut_successfull">URL Shortcut has been updated successfully.</string>
    <string name="button_google_shopper">Shopper</string>
    <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
    <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
    <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
    <string name="msg_sbc_unknown_page">Unknown page</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_back">Back</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
</resources>