<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res/com.captix.scan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <include
                android:id="@+id/activity_setting_title"
                layout="@layout/header" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="@color/background_gray" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/scanner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/sound" />

                <ToggleButton
                    android:id="@+id/activity_settings_sv_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_toggle_bg"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:padding="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/auto_open_url" />

                <ToggleButton
                    android:id="@+id/activity_settings_sv_open_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_toggle_bg"
                    android:checked="true"
                    android:textOff=""
                    android:textOn="" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:id="@+id/setting_ll_url_profile"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/listview_selector"
                android:clickable="true"
                android:onClick="onClick_UrlProfile"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/url_profile" />

                <TextView
                    android:id="@+id/setting_tv_urlprofile"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="15dp"
                    android:gravity="right"
                    android:text="@string/link"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:id="@+id/setting_ll_auto_close_by_time"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/listview_selector"
                android:gravity="center_vertical"
                android:onClick="onClick_AutoClose"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="@string/auto_close" />

                <TextView
                    android:id="@+id/activity_setting_tv_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@android:color/darker_gray" />

                <ImageButton
                    android:id="@+id/settings_ib_auto_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/ic_arrow"
                    android:contentDescription="@string/common_imagebutton_description"
                    android:onClick="onClick_AutoClose" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <LinearLayout
                android:id="@+id/setting_ll_shortcus"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/listview_selector"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:onClick="onClick_UrlShortcus"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="left"
                    android:text="Shortcut" />

                <TextView
                    android:id="@+id/activity_setting_tv_link"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="none"
                    android:textColor="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:background="@color/background_gray" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/share" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/setting_ll_social_message"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/listview_selector"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/setting_ic_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_setting_sms"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@+id/settings_ib_share_message"
                    android:layout_toRightOf="@+id/setting_ic_sms"
                    android:gravity="left"
                    android:text="@string/message" />

                <ImageButton
                    android:id="@+id/settings_ib_share_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_arrow"
                    android:contentDescription="@string/common_imagebutton_description" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <RelativeLayout
                android:id="@+id/setting_ll_social_mail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/listview_selector"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <ImageView
                    android:id="@+id/setting_ic_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_setting_mail"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@+id/settings_ib_share_mail"
                    android:layout_toRightOf="@+id/setting_ic_mail"
                    android:gravity="left"
                    android:text="@string/mail" />

                <ImageButton
                    android:id="@+id/settings_ib_share_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_arrow"
                    android:contentDescription="@string/common_imagebutton_description" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray" />

            <RelativeLayout
                android:id="@+id/setting_ll_social_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/listview_selector"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/setting_ic_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_setting_twitter"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@+id/settings_ib_share_twitter"
                    android:layout_toRightOf="@+id/setting_ic_twitter"
                    android:gravity="left"
                    android:text="@string/twitter" />

                <ImageButton
                    android:id="@+id/settings_ib_share_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_arrow"
                    android:contentDescription="@string/common_imagebutton_description" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/setting_ll_social_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/listview_selector"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/setting_ic_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_setting_fb"
                    android:contentDescription="@string/common_imagebutton_description" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_toLeftOf="@+id/settings_ib_share_facebook"
                    android:layout_toRightOf="@+id/setting_ic_facebook"
                    android:gravity="left"
                    android:text="@string/facebook" />

                <ImageButton
                    android:id="@+id/settings_ib_share_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/ic_arrow"
                    android:contentDescription="@string/common_imagebutton_description" />
            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="20dp"
                android:background="@color/background_gray"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>